<package format="3">
    <name>univloc_tracker</name>
    <version>0.0.1</version>
    <description>

        A SLAM front-end.

    </description>
    <author> ECI Maintainer </author>
    <maintainer email="eci.maintainer@intel.com"> ECI Maintainer </maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_core</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

    <build_depend condition="$ROS_VERSION == 1">roscpp</build_depend>
    <build_depend condition="$ROS_VERSION == 2">rclcpp</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>std_msgs</build_depend>
    <!--ros-image-feature-msgs doesn't seem to be a build/run-time dependency, it is used for semantic slam
    with OpenVINO which hasn't been used for several years, check https://github.com/cedrusx/deep_features-->
    <build_depend>image_feature_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>univloc_msgs</build_depend>
    <build_depend>univloc_dependencies</build_depend>
    <build_depend>univloc_slam</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>image_trasnport</build_depend>


    <exec_depend condition="$ROS_VERSION == 1">roscpp</exec_depend>
    <exec_depend condition="$ROS_VERSION == 2">rclcpp</exec_depend>
    <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>image_feature_msgs</exec_depend>
    <exec_depend>message_filters</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>eigen</exec_depend>
    <exec_depend>univloc_msgs</exec_depend>
    <exec_depend>univloc_dependencies</exec_depend>
    <exec_depend>univloc_slam</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <exec_depend>image_trasnport</exec_depend>
    <test_depend>rosbag</test_depend>

    <export>
       <build_type condition="$ROS_VERSION == 1">catkin</build_type>
       <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    </export>

</package>
