<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pointcloud_groundfloor_segmentation</name>
  <version>2.1.0</version>
  <description> Efficient groundfloor segmentation for 3D pointclouds</description>
  <maintainer email="eci.maintainer@intel.com">ECI Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>depth_image_proc</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <exec_depend>nav2_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
