<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wandering_irobot_tutorial</name>
  <version>0.1.0</version>
  <description>Wandering with iRobot create 3 robot tutorial</description>
  <maintainer email="eci.maintainer@intel.com">ECI Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>irobot_create_control</exec_depend>
  <exec_depend>irobot_create_description</exec_depend>
  <exec_depend>irobot_create_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>wandering_app</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>pointcloud_groundfloor_segmentation</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
