<?xml version="1.0"?>
<package format="2">
  <name>rvc_panel_rviz2_plugin</name>
  <version>2.1.0</version>
  <description>RVC controls for RViz.</description>
  <maintainer email="robotics@intel.com">Intel Robotics Team</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rvc_messages</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>state_machine_msgs</build_depend>    
  <build_depend>qtbase5-dev</build_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>gui_settings</depend>
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_default_plugins</depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
